export const SAMPLE_WORKOUT_NOTES = `Push
- Chest press - 39
- Bench press - 12x 80kg
- Overhead press - 3 x8 50kg

Pull
- Lat pulldown - 32
- Arm curl - 23

Legs
- Leg press - 68.3
- Squat - 3 x5 100kg`;
