appId: ${APP_ID}
---
- launchApp:
    clearState: true
- tapOn: "Settings"
- tapOn: "Paste workout notes"
- tapOn: "Workout notes input"
- setClipboard: |
    Push
    - Bench press - 80kg
    - Overhead press - 50kg
- pasteText
- hideKeyboard
- takeScreenshot: before-review-day-assert
- assertVisible: "Review 1 day"
- tapOn: "Review 1 day"
- takeScreenshot: before-import-program-assert
- assertVisible: "Import 1 program"
- tapOn: "Import 1 program"
- takeScreenshot: before-push-assert
- assertVisible: "Push"
